Utworzono za pomocą Colaboratory

--- a/Lab6/Lab6.ipynb
+++ b/Lab6/Lab6.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lab6.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPhuVJYlN3lPF+/dk3mfJdD",
+      "authorship_tag": "ABX9TyPd2gzZCN30yZUD1qzTq3RV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +30,12 @@
         "id": "AhjFc73tAvhb"
       },
       "source": [
+        "#Otwarcie pliku\n",
         "file = open('dog_breeds.txt')\n",
+        "#Pokazuje typ pliku\n",
         "type(file)\n",
         "\n",
+        "#Otwieramy plik w trybie binarnym\n",
         "file = open('dog_breeds.txt', 'rb', buffering=0)\n",
         "type(file)"
       ],
@@ -45,11 +48,12 @@
         "id": "kTsLhl5rExX8"
       },
       "source": [
+        "#Otwarcie pliku w trybie odczytu\n",
         "with open('dog_breeds.txt', 'r') as reader:\n",
         "  print(reader.readline(5))\n",
         "  print(reader.readline(5))\n",
         "  print(reader.readline(5))\n",
-        "  print(reader.readline(5)) #czyta tylko 5 bjatów "
+        "  print(reader.readline(5)) #czyta tylko 5 znaków"
       ],
       "execution_count": null,
       "outputs": []
@@ -103,6 +107,7 @@
         "with open('dog_breeds.txt', 'r') as reader:\n",
         "  dog_breeds = reader.readlines()\n",
         "\n",
+        "#Otwarcie pliku w trybie zapisu\n",
         "with open('dog_breeds_reversed.txt', 'w') as writer:\n",
         "  #Zapisanie zawartości pliku dog_breeds w odwrotnej kolejności, w nowym pliku o nazwe \"dog_breeds_reversed\"\n",
         "  for breed in reversed(dog_breeds):\n",
